--- a/wechat/src/main/webapp/xcview/css/my_homepage.css
+++ b/wechat/src/main/webapp/xcview/css/my_homepage.css
@@ -24,7 +24,7 @@ header{
 	width: 100%;
 	height: 100%;
 	background: url(../images/geren.jpg) top no-repeat;
-	background-size: 100% 2.3rem;
+	background-size: 100% 100%;
 }
 /*.header_bg{
 	width: 100%;
@@ -33,7 +33,7 @@ header{
 	background-size: 100% 100%;
 }*/
 .header_img{
-	padding-top: 1.4rem;
+	padding-top: 1.05rem;
 }
 .header_img_right{
 	width: 2.09rem;
@@ -62,6 +62,35 @@ header{
 	color: #333333;
 	margin-top: 0.24rem;
 }
+
+/*关注量粉丝开始*/
+.person_follow{
+	width: 6rem;
+    margin: 0 auto;
+    position: relative;
+    margin-top: 0.16rem;
+    overflow: hidden;
+    color: #fff;
+}
+.left_personal{
+    text-align: right;
+    width: 2.8rem;
+}
+.separate {
+    width: 0.03rem;
+    height: 0.3rem;
+    background: #fff;
+    position: absolute;
+    left: 50%;
+    top: 0.05rem;
+    margin-left: -0.015rem;
+}
+.right_personal {
+    text-align: left;
+    width: 2.8rem;
+}
+
+/*关注量粉丝结束*/
 /*头部结束*/
 
 /*中间模块开始*/
