--- a/wechat/src/main/webapp/xcview/css/my_wallet.css
+++ b/wechat/src/main/webapp/xcview/css/my_wallet.css
@@ -69,7 +69,7 @@ header{
 	background: #fff;
 	border: 1px solid #F0F0F0;
 	border-radius: 16px;
-	/*margin-top: 1.08rem;*/
+	box-shadow: 0 10px 8px 0 rgba(0,0,0,0.16);
 }
 .balance .div0{
 	width: 100%;
@@ -104,7 +104,7 @@ header{
 	width: 100%;
 	min-height: 1rem;
 	background: #fff;
-	margin-top: 0.2rem;
+	margin-top: 0.4rem;
 }
 .record_main{
 	width: 7.24rem;
