--- a/wechat/src/main/webapp/xcview/css/details_style.css
+++ b/wechat/src/main/webapp/xcview/css/details_style.css
@@ -862,6 +862,67 @@ div.pinch-zoom,
 .item-title .unit{background:none;line-height:49px;font-size:24px;padding:0 10px;float:left;}
 /*即将开始提示*/
 
+
+/*直播结束点击查看回放开始*/
+.video_end_top1{
+	position: absolute;
+    text-align: center;
+    width: 100%;
+     height: 7.6rem;
+    top: 0;
+    margin-top: 1.9rem;
+    z-index: 1;
+    background: rgba(0,0,0,0.80);
+    /*display: none;*/
+}
+.video_end_top1 p{
+	color: #fff;
+	font-size: 0.68rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+.video_end_top1 .div{
+	background: #00BC12;
+	border-radius: 8px;
+	width: 3.063rem;
+	height: 1.191rem;
+	line-height: 1.191rem;
+	margin: 0 auto;
+	font-size: 0.595rem;
+	color: #fff;
+}
+/*直播结束点击查看回放结束*/
+
+/*直播结束，正在生成回放提示开始*/
+.video_end_top2{
+	position: absolute;
+    text-align: center;
+    width: 100%;
+     height: 7.6rem;
+    top: 0;
+    margin-top: 1.9rem;
+    z-index: 1;
+    background: rgba(0,0,0,0.80);
+    /*display: none;*/
+}
+.video_end_top2 p{
+	color: #fff;
+	font-size: 0.68rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+.video_end_top2 .div{
+	background: #00BC12;
+	border-radius: 8px;
+	width: 3.063rem;
+	height: 1.191rem;
+	line-height: 1.191rem;
+	margin: 0 auto;
+	font-size: 0.595rem;
+	color: #fff;
+}
+/*直播结束，正在生成回放提示结束*/
+
 /*直播已结束提示*/
 .video_end_top{
 	position: absolute;
